# pi-cross

./: .gitignore  README.md
.github/workflows/: build-aarch64.yml  build-armv7.yml
aarch64/: Dockerfile  aarch64-toolchain.cmake  entrypoint.sh
armv7/: Dockerfile  armv7-toolchain.cmake  entrypoint.sh
example/: CMakeLists.txt  main.cpp
